--- a/6/6.2/6.2.md
+++ b/6/6.2/6.2.md
@@ -1,3 +1,328 @@
 # 6.2. Diccionario de Datos
+Información de los atributos considerados en las diferentes entidades que abarcamos en nuestro modelo conceptual para nuestro Sistema de Gestión de Arrendamientos y Espacios en MallPlaza.
 
-Sample content for section 6.2.
+## Entidad Persona
+La entidad Persona representa a los individuos que interactúan o tienen relación con el sistema. Almacena información básica de identificación personal, como nombre, apellidos, documento de identidad y datos de contacto (como teléfono y correo electrónico). Esta entidad es genérica y puede ser utilizada para representar tanto a clientes como a empleados.
+
+| **Atributo**   | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de**     | **Descripción (Corta)**                        |
+| -------------- | -------------- | ----------- | --------------------- | ---------- | ------------------- | ---------------------------------------------- |
+| idPersona      | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A                 | Identificador único de la persona.             |
+| Nombre         | CHAR(100)      | x(100)      | No nulo               | N/A        | N/A                 | Nombre de la persona.                          |
+| firstLastName  | CHAR(100)      | x(100)      | No nulo               | N/A        | N/A                 | Primer apellido de la persona.                 |
+| secondLastName | CHAR(100)      | x(100)      | Nulo permitido        | N/A        | N/A                 | Segundo apellido de la persona.                |
+| E-mail         | CHAR(256)      | x(256)      | Formato email válido  | N/A        | N/A                 | Dirección de correo electrónico de la persona. |
+| Teléfono       | CHAR(15)       | 999999999   | 9-15 dígitos, no nulo | N/A        | N/A                 | Número de teléfono de la persona.              |
+| Departamento   | CHAR(50)       | x(50)       | Nulo permitido        | N/A        | N/A                 | Departamento donde reside la persona.          |
+| Ciudad         | CHAR(50)       | x(50)       | Nulo permitido        | N/A        | N/A                 | Ciudad donde reside la persona.                |
+| Distrito       | CHAR(50)       | x(50)       | Nulo permitido        | N/A        | N/A                 | Distrito donde reside la persona.              |
+| nroDomicilio   | CHAR(10)       | 999999      | Nulo permitido        | N/A        | N/A                 | Número de domicilio de la persona.             |
+| nroDocumento   | CHAR(20)       | x(20)       | No nulo               | N/A        | N/A                 | Número de documento de identidad.              |
+| tipoDocumento  | CHAR(20)       | x(20)       | No nulo               | N/A        | N/A                 | Tipo de documento de identidad.                |
+| Edad           | INT            | 999         | 0 - 120               | Años       | Fecha de Nacimiento | Edad de la persona.                            |
+
+## Entidad Inquilino
+La entidad Inquilino contiene la información específica de los arrendatarios que tienen un contrato con Mallplaza. Además de heredar atributos generales de la entidad Persona, esta entidad almacena datos adicionales relevantes para el proceso de arrendamiento.
+
+| **Atributo**     | **Naturaleza** | **Formato** | **Valores Válidos**          | **Unidad** | **Derivada de** | **Descripción (Corta)**                          |
+| ---------------- | -------------- | ----------- | ---------------------------- | ---------- | --------------- | ------------------------------------------------ |
+| idInquilino      | CHAR(10)       | x(10)       | No nulo, único               | N/A        | N/A             | Identificador único del inquilino.               |
+| estadoInquilino  | CHAR(20)       | x(20)       | Activo, Inactivo             | N/A        | N/A             | Estado del inquilino en el sistema.              |
+| fechaRegistro    | DATE           | YYYY-MM-DD  | Fecha válida, no nulo        | N/A        | N/A             | Fecha en que se registró al inquilino.           |
+| fechaEliminación | DATE           | YYYY-MM-DD  | Fecha válida, nulo permitido | N/A        | N/A             | Fecha de eliminación del registro del inquilino. |
+
+## Entidad Documento
+Entidad general que abarca tanto Contrato como Solicitud, se estructuró para que pueda manejar documentos relacionados con diferentes procesos en el sistema, como contratos, solicitudes, y otros documentos.
+
+| **Atributo**  | **Naturaleza** | **Formato** | **Valores Válidos**               | **Unidad** | **Derivada de** | **Descripción (Corta)**                          |
+| ------------- | -------------- | ----------- | --------------------------------- | ---------- | --------------- | ------------------------------------------------ |
+| idDocumento   | CHAR(10)       | x(10)       | No nulo, único                    | N/A        | N/A             | Identificador único del documento.               |
+| tipoDocumento | CHAR(50)       | x(50)       | Contrato, Solicitud, Recibo, etc. | N/A        | N/A             | Tipo de documento asociado.                      |
+| rutaDocumento | CHAR(256)      | x(256)      | No nulo                           | N/A        | N/A             | Ruta donde se almacena el archivo digital.       |
+| fechaSubido   | DATE           | YYYY-MM-DD  | Fecha válida, no nulo             | N/A        | N/A             | Fecha en que el documento fue subido al sistema. |
+
+## Entidad Solicitud
+La entidad Solicitud representa las solicitudes formales realizadas por los usuarios que desean arrendar un espacio en uno de las sedes de MallPlaza
+
+| **Atributo**    | **Naturaleza** | **Formato** | **Valores Válidos**          | **Unidad** | **Derivada de** | **Descripción (Corta)**                           |
+| --------------- | -------------- | ----------- | ---------------------------- | ---------- | --------------- | ------------------------------------------------- |
+| idSolicitud     | CHAR(10)       | x(10)       | No nulo, único               | N/A        | N/A             | Identificador único de la solicitud.              |
+| estadoSolicitud | CHAR(20)       | x(20)       | Abierta, Cerrada             | N/A        | N/A             | Estado actual de la solicitud.                    |
+| fechaSolicitud  | DATE           | YYYY-MM-DD  | Fecha válida, no nulo        | N/A        | N/A             | Fecha en que se realizó la solicitud.             |
+| fechaResolución | DATE           | YYYY-MM-DD  | Fecha válida, nulo permitido | N/A        | N/A             | Fecha en que se resolvió la solicitud, si aplica. |
+
+## Entidad Contrato
+Contiene información clave sobre el acuerdo de arrendamiento, con atributos para fechas, estado y monto. Se añadió también el campo "condición" para cualquier cláusula especial.
+
+| **Atributo**     | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                       |
+| ---------------- | -------------- | ----------- | -------------------------- | ---------- | --------------- | --------------------------------------------- |
+| id_contrato       | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Identificador único del contrato.             |
+| monto            | DECIMAL(10,2)  | 9999999.99  | No nulo                    | N/A        | N/A             | Monto acordado en el contrato.                |
+| fecha_inicio      | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha de inicio del contrato.                 |
+| fecha_vencimiento | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha de vencimiento del contrato.            |
+| estado           | VARCHAR(10)    | x(10)       | Activo, Expirado, Renovado | N/A        | N/A             | Estado actual del contrato.                   |
+| condición        | VARCHAR(256)   | x(256)      | Nulo permitido             | N/A        | N/A             | Condiciones especiales asociadas al contrato. |
+| porcentaje       | DECIMAL (2,2)  | 99.99       | No nulo                    | N/A        | N/A             | Porcentaje de las ventas que serviran para calular el monto final de la renta.  |
+
+## Entidad Recobro
+Contiene información sobre la Solicitud especifica de un servicio extra que la empresa realice para el inquilino
+
+| **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                       |
+| ------------------ | -------------- | ----------- | -------------------------- | ---------- | --------------- | --------------------------------------------- |
+| Nombre_recobro     | VARCHAR(20)    | x(20)       | No nulo                    | N/A        | N/A             | Nombre del recobro                            |
+| Descripcion_recobro| VARCHAR(50)    | x(50)       | No nulo                    | N/A        | N/A             | Detalles del recobro a realizar               |
+| id_recobro         | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el recobro            |
+| Razon_recobro      | VARCHAR(30)    | x(30)       | no nulo                    | N/A        | N/A             | Motivo por el cual se realiza el recobro      |
+| Categoria_recobro  | VARCHAR(20)    | x(20)       | no nulo                    | N/A        | N/A             | Clasificacion en la cual entra el recobro     |
+| Estado_recobro     | VARCHAR(20)    | x(20)       | Enviado, Valorizando, Pendiente, Ejecutado, Completado| N/A        | N/A             | Estado en la que se encuentra el recobro      |
+ 
+## Entidad Proyecto de recobro 
+Planificacion sobre la ejecucion de un recobro
+
+| **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                                                   |
+| ------------------ | -------------- | ----------- | -------------------------- | ---------- | --------------- | ------------------------------------------------------------------------- |
+| Nombre_proyecto    | VARCHAR(30)    | x(30)       | No nulo                    | N/A        | N/A             | Nombre del proyecto                                                       |
+| id_proyecto        | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el proyecto                                       |
+| Costos             | Decimal(5,2)   | x99999.99   | no nulo                    | Sol        | N/A             | Costos asociados sobre la ejecucion del proyecto                          |
+| Estado_proyecto    | VARCHAR(15)    | x(15)       | Ejecutado, Supervision     | N/A        | N/A             | Estado en el que se encuentra el proyecto                                 |
+
+  ## Entidad Acuerdo de recobro
+Acuerdo que es consecuencia de la negociacion entre el inquilino y la empresa para definir como proceder para realizar el recobro
+
+| **Atributo**        | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                                    |
+| ------------------- | -------------- | ----------- | -------------------------- | ---------- | --------------- | -----------------------------------------------------------|
+| ID_acuerdo          | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el acuerdo del recobro             |
+| Fecha_acuerdo       | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | dias       | N/A             | Fecha en la que se realiza el acuerdo                      |
+| Precio_acuerdo      | Decimal(5,2)   | x99999.99   | No nulo                    | Sol        | N/A             | Cantidad de dinero a cobrar por la ejecucion del proyecto  |
+| Descripcion_acuerdo | VARCHAR(40)    | x(40)       | no nulo                    | N/A        | N/A             | Detalles sobre el acuerdo                                  |
+
+  ## Entidad Actividades
+Actividad realizada durante la ejecucion del proyecto
+
+| **Atributo**        | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                                    |
+| ------------------- | -------------- | ----------- | -------------------------- | ---------- | --------------- | -----------------------------------------------------------|
+| cod_actividad       | CHAR(30)       | x(10)       | no nulo, único             | N/A        | N/A             | Codigo para identificar a la actividad                     |
+| descripcion         | VARCHAR(30)    | x(30)       | No nulo                    | N/A        | N/A             | Descripcion de la actividad                                |
+| Fecha_inicio        | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha en la que inicia la actividad                        |
+| Fecha_fin           | CHAR(10)       | x(10)       | Fecha válida, no nulo      | N/A        | N/A             | Fecha en la que finaliza la actividad                      |
+
+
+  ## Entidad Programación Mantenimientos
+Representa la programación de mantenimientos, tanto preventivo como correctivo.
+
+| **Atributo**    | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**                                  |
+| --------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | -------------------------------------------------------- |
+| cod_Mantenimiento | CHAR(10)     | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del mantenimiento                    |
+| prioridad       | CHAR(2)        | XX          | TAB1                  | N/A        | N/A             | Prioridad que tiene el mantenimiento                     |
+| plazo           | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha máxima que se tiene para realizar el mantenimiento |
+| Descripción     | VARCHAR           | x(64)       | No nulo               | N/A        | N/A             | Detalles que tiene el mantenimiento                      |
+| encargado       | VARCHAR           | x(64)       | No nulo               | N/A        | N/A             | Encargado de dirigir cierto mantenimiento            |
+|Estado           | VARCHAR           | x(30)       | (Pendiente, Hecho)     | N/A         |  N/A             |  Estado en que se encuentra un mantenimiento programado| 
+
+
+TAB1
+
+| CODIGO | DESCRIPCIÓN |
+| ------ | ----------- |
+| I1     | Baja        |
+| I2     | Media       |
+| I3     | Alta        |
+| I4     | Crítica     |
+
+
+
+
+## Entidad Registro Incidencia
+Representa el registro de incidencias y problemas que pueda haber en el centro comercial para luego realizar su mantenimiento correctivo.
+
+| **Atributo**   | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**               |
+| -------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | ------------------------------------- |
+| cod_incidencia | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único de la incidencia  |
+| fecha_Registro | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha que se realizó el registro      |
+| hora_Registro  | TIME           | HH: MM :SS  | Valida en tiempo      | horas      | N/A             | Hora que se realizó el registro       |
+| descripción    | VARCHAR           | x(64)       | No nulo               | N/A        | N/A             | Detalles que tiene la incidencia      |
+| estado         | VARCHAR           | x(30)       | (pendiente, programado) | N7A        | N/A             | Estado de la incidencia registrada    |
+
+
+## Entidad Registro Mantenimiento
+Representa el registro de matenimiento realizados.
+
+| **Atributo**     | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**                                   |
+| ---------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | --------------------------------------------------------- |
+| cod_RMantenimiento | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del registro de mantenimiento         |
+| fecha_Realizada   | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha que se realizó el registro                          |
+| hora_inicio    | TIME           | HH: MM :SS  | Valida en tiempo      | horas      | N/A             | Hora que se realizó el mantenimiento                          |
+| hora_fin       | TIME           | HH: MM : SS | Valida en tiempo       | horas     | N/A              | Hora en que finalizó el mantenimiento |
+| Observaciones    | VARCHAR           | x(64)       | No nulo               | N/A        | N/A             | Detalles que hubieron en el mantenimiento                 |
+
+
+## Entidad Instalación
+Representa las zonas y tiendas donde se va a realizar el mantenimiento.
+
+| **Atributo**         | **Naturaleza** | **Formato** | **Valores Válidos**  | **Unidad** | **Derivada de** | **Descripción (Corta)**                    |
+| -------------------- | -------------- | ----------- | -------------------- | ---------- | --------------- | ------------------------------------------ |
+| nombre_instal        | CHAR           | x(30)       | No nulo              | N/A        | N/A             | Nombre específico de la instalación        |
+| Tipo                 | VARCHAR        | x(20)       | zona, tienda, módulo | N/A        | N/A             | Detalla el tipo de intalación              |
+
+## Entidad Espacio comercial
+Representa los modulos y tiendas que se encuentran en Mall Plaza.
+
+| **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos** | **Unidad**       | **Derivada de** | **Descripción**                       |
+| ------------------ | -------------- | ----------- | ------------------- | ---------------- | --------------- | ------------------------------------- |
+| idEspacioComercial | CHAR (10)      | x(10)       | No nulo, único      | N/A              | N/A             | Código único asignado a cada espacio comercial.       |
+| tipo de inmueble   | VARCHAR (10)      | x(10)       | TAB1                | N/A                   | N/A             | Clasificación del inmueble.                           |
+| area               | DECIMAL(6,2)  | 999999.99  | >0                  | Metros cuadrados (m²) | N/A             | Superficie total del espacio comercial.               |
+| estado             | VARCHAR (10)      | x(10)       | TAB2                | N/A                   | N/A             | Estado actual del espacio comercial.                  |
+| tarifa             | DECIMAL (6,2) | 999999.99  | >0               | N/A                   | N/A             | Indica el precio por metro cuadrado que se debera pagar por el alquiler del espacio comercial. |
+
+TAB1
+
+| CODIGO | DESCRIPCIÓN |
+| ------ | ----------- |
+| E1     | Tienda      |
+| E2     | Modulo      |
+
+TAB2
+
+| CODIGO | DESCRIPCIÓN      |
+| ------ | ---------------- |
+| S1     | Ocupado          |
+| S2     | Disponible       |
+| S3     | En mantenimiento |
+
+## **Entidad Zonas**
+Entidad que representa las distintas áreas o secciones ubicadas dentro de un centro comercial
+
+|**Atributo** |**Naturaleza**| **Formato**  | **Valores Válidos**    | **Unidad** | **Derivada de** | **Descripción**                          |
+| ----------- | ------------ | ------------ | ---------------------- | ---------- | --------------- | ------------------------------------------------ |
+| nombre_zona | VARCHAR(25)    | x(25)      | No nulo, único          | N/A        | N/A             | Nombre de la zona que identifica su ubicación. |
+| piso        | INT          | 9           | 1-9, No nulo            | N/A        | N/A             | Número del piso donde se encuentra la zona.     |
+| referencia  | VARCHAR(256)    | x(256)      | No nulo                 | N/A        | N/A             | Descripción o referencia adicional de la zona.   |
+
+
+## **Entidad Factura**  
+La entidad Factura representa los documentos emitidos por el sistema para cobrar los montos pendientes a los inquilinos. Cada factura detalla los términos del cobro, como el monto total, fecha de emisión y estado de la factura (si está pagada o pendiente).
+
+| **Atributo**      | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción**               |
+| ----------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | ------------------------------------- |
+| idFactura         | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único de la factura.    |
+| Fecha_Emisión     | DATE           | dd/mm/aaaa  | No nulo               | N/A        | N/A             | Fecha en la que se emitió la factura. |
+| Monto_Total       | DECIMAL(10,2)  | 9999999.99  | No nulo, > 0          | Moneda     | N/A             | Monto total a pagar por la factura.   |
+| Estado            | CHAR(10)       | x(10)       | "Pendiente", "Pagado" | N/A        | N/A             | Estado actual de la factura.          |
+| Fecha_Vencimiento | DATE           | dd/mm/aaaa  | No nulo               | N/A        | N/A             | Fecha límite para pagar la factura.   |
+| idInquilino      | CHAR(10)       | x(10)       | No nulo, único               | N/A        | N/A             | Identificador único del inquilino.               |
+
+---
+
+## **Entidad Recordatorio**  
+La entidad Recordatorio almacena la información de los recordatorios de pago enviados a los inquilinos. Estos recordatorios pueden ser enviados antes o después de la fecha de vencimiento de una factura, para notificar sobre la necesidad de pago.
+
+| **Atributo**       | **Naturaleza** | **Formato**  | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción**                                                              |
+| ------------------ | -------------- | -----------  | --------------------- | ---------- | --------------- | ------------------------------------------------------------------------------------ |
+| idRecordatorio     | CHAR(10)       | x(10)        | No nulo, único        | N/A        | N/A             | Identificador único del recordatorio.                                                |
+| Fecha_Envio        | DATE           | dd/mm/aaaa   | No nulo               | N/A        | N/A             | Fecha en la que se envió el recordatorio.                                            |
+| Tipo_Recordatorio  | CHAR(10)       | x(10)        | "Previo", "Posterior" | N/A        | N/A             | Indica si el recordatorio fue enviado antes o después del vencimiento de la factura. |
+| contenido          | CHAR           | x(64)          | No nulo               | N/A        | N/A             | Mensaje o detalles específicos que se enviaron en el recordatorio.                   |
+
+---
+
+## **Entidad Pago**  
+La entidad Pago almacena la información de los pagos realizados por los inquilinos. Un pago puede ser registrado manualmente por el administrador o automáticamente a través de una pasarela de pagos. Puede haber múltiples pagos asociados a una factura si se permiten pagos parciales.
+
+| **Atributo** | **Naturaleza** | **Formato** | **Valores Válidos**    | **Unidad** | **Derivada de** | **Descripción (Corta)**                 |
+| ------------ | -------------- | ----------- | ---------------------- | ---------- | --------------- | --------------------------------------- |
+| idPago       | CHAR(10)       | x(10)       | No nulo, único         | N/A        | N/A             | Identificador único del pago.           |
+| Fecha_Pago   | DATE           | dd/mm/aaaa  | No nulo                | N/A        | N/A             | Fecha en la que se realizó el pago.     |
+| Monto_Pago   | DECIMAL(10,2)  | 9999999.99  | No nulo, > 0           | Moneda     | N/A             | Monto pagado en esta transacción.       |
+| Método_Pago  | CHAR(20)       | x(20)       | "Manual", "Automático" | N/A        | N/A             | Método utilizado para realizar el pago. |
+| tipoMoneda     | CHAR(3)         | x(3)          | "USD", "EUR", "PEN", etc.| N/A        | N/A             | Moneda en la que se realizó el pago.    |
+---
+
+## **Entidad Empleado**  
+La entidad Empleado representa a una persona que trabaja en una empresa, almacenando sus datos personales y laborales.
+
+| **Atributo**             | **Naturaleza** | **Formato**     | **Valores Válidos**               | **Unidad** | **Derivada de** | **Descripción**                                            |
+| ------------------------ | -------------- | --------------- | --------------------------------- | ---------- | --------------- | ---------------------------------------------------------- |
+| IdEmpleado               | CHAR(10)       | x(10)           | Único por empleado                | N/A        | N/A             | Identificador único para cada empleado                     |
+| Nombre | CHAR (10)      | x(10)       | No nulo       | N/A                   | N/A             | Nombre del empleado.     |    
+| firstLastName | CHAR (10)      | x(10)       | No nulo       | N/A                   | N/A             | Primer apellido del empleado.     |    
+| secondLastName | CHAR (10)      | x(10)       | No nulo       | N/A                   | N/A             | Segundo apellido del empleado.     |    
+| Teléfono                 | VARCHAR(15)    | x(15)           | Número de teléfono válido         | N/A        | N/A             | Número de contacto telefónico                              |
+| Correo Electrónico       | VARCHAR(100)   | x(100)          | Dirección de email válida         | N/A        | N/A             | Correo electrónico personal o laboral                      |
+| Cargo                    | VARCHAR(50)    | x(50)           | Cargo dentro de la empresa        | N/A        | N/A             | Título o posición que ocupa el empleado en la organización |
+| FechaNac                    | DATE           | YYYY-MM-DD     | Fecha válida                         | Días       | N/A             | Fecha de nacimiento                             |
+
+
+---
+
+## **Entidad Contrato Empleado**  
+La entidad Contrato Empleado define los términos de empleo de un empleado.
+
+| **Atributo**          | **Naturaleza** | **Formato**    | **Valores Válidos**                  | **Unidad** | **Derivada de** | **Descripción**                                          |
+| --------------------- | -------------- | -------------- | ------------------------------------ | ---------- | --------------- | -------------------------------------------------------- |
+| IdContratoEmpleado    | CHAR(10)       | x(10)          | Único por contrato                   | N/A        | N/A             | Identificador único para cada contrato                   |
+| IdEmpleado            | CHAR(10)       | x(10)          | Relación con empleado                | N/A        | Empleado        | Identificador del empleado asociado al contrato          |
+| Fecha de Inicio       | DATE           | YYYY-MM-DD     | Fecha válida                         | Días       | N/A             | Fecha de inicio del contrato                             |
+| Fecha de Fin          | DATE           | YYYY-MM-DD     | Fecha válida o NULL si es indefinido | Días       | N/A             | Fecha de finalización del contrato, si es aplicable      |
+| Salario Base          | DECIMAL(10,2)  | Numérico(10,2) | Valor monetario                      | Moneda     | N/A             | Salario base asociado al contrato del empleado           |
+| Jornada Laboral       | VARCHAR(15)    | x(15)          | Completa, Parcial, Turno Rotativo    | N/A        | N/A             | Tipo de jornada que cubre el contrato                    |
+| Estado del Contrato   | VARCHAR(15)    | x(15)          | Activo, Finalizado, Suspendido       | N/A        | N/A             | Estado actual del contrato del empleado                  |
+| Descripción del Cargo | TEXT           | Texto libre    | Descripción detallada                | N/A        | N/A             | Descripción del cargo o responsabilidades en el contrato |
+
+---
+
+## Entidad Espacio Común
+Se encuentran los espacios comunes que se ponen a dispocición para ser utilizados
+
+| **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad**            | **Derivada de** | **Descripción (Corta)**                                                                                                                                                              |
+| ------------------ | -------------- | ----------- | --------------------- | --------------------- | --------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| nombreEspacioComún | CHAR (10)      | x(10)       | No nulo, único        | N/A                   | N/A             | Nombre asignado a cada espacio comun.                                                                                                                                                |
+| Área               | DECIMAL(10,2)  | 9999999.99  | >0                    | Metros cuadrados (m²) | N/A             | Superficie total del espacio comercial.                                                                                                                                              |
+| Ubicación          | CHAR           | X(64)       | No nulo               | N/A                   | N/A             | Marca la coordenada de inicio y final en el plano del mapa se considera una región rectangular, no indica area que ocupará exactamente, solo que en ese espacio está el que se usará |
+| Estado             | CHAR (10)      | x(10)       | TAB1                  | N/A                   | N/A             | Estado actual del espacio comercial.                                                                                                                                                 |
+| PrecioPorDia       | DECIMAL(10,2)  | 9999999.99  | >0                    | Moneda                | N/A             | Precio de alquilar el Espacio común por un día.                                                                                                                                      |
+| MotivoDeUso        | CHAR(50)       | Texto libre | Descripción detallada | N/A                   | N/A             | Descripción del los motivos y para que se usará el Espació común solicitado.                                                                                                         |
+
+
+TAB1
+
+| **CODIGO** | **DESCRIPCIÓN**  |
+| ---------- | ---------------- |
+| S1         | Ocupado          |
+| S2         | Disponible       |
+| S3         | En mantenimiento |
+
+
+## Entidad Evento
+Esta entidad almacena los eventos que se realizarán en el mall, con todos los detalles necesarios para su planificación y ejecución.
+
+| **Atributo**        | **Naturaleza** | **Formato** | **Valores Válidos** | **Unidad** | **Derivada de** | **Descripción (Corta)**                                                                         |
+| ------------------- | -------------- | ----------- | ------------------- | ---------- | --------------- | ----------------------------------------------------------------------------------------------- |
+| Nombre              | CHAR (100)     | Texto libre | No nulo             | N/A        | N/A             | Nombre descriptivo del evento.                                                                  |
+| Descripción         | CHAR (255)     | Texto libre | No nulo             | N/A        | N/A             | Breve descripción del evento.                                                                   |
+| FechaInicio         | DATE           | YYYY-MM-DD  | No nulo             | N/A        | N/A             | Fecha de inicio del evento.                                                                     |
+| FechaFin            | DATE           | YYYY-MM-DD  | No nulo             | N/A        | N/A             | Fecha de finalización del evento.                                                               |
+| HorarioInicio       | TIME           | HH:MM:SS    | No nulo             | N/A        | N/A             | Hora de inicio del evento.                                                                      |
+| HorarioFin          | TIME           | HH:MM:SS    | No nulo             | N/A        | N/A             | Hora de finalización del evento.                                                                |
+| Ubicación           | CHAR (64)      | Texto libre | No nulo             | N/A        | Espacio Común   | Marca la coordenada de inicio y final en el plano del mapa se considera una región rectangular. |
+| PúblicoObjetivo     | CHAR (50)      | Texto libre | TAB2                | N/A        | N/A             | Perfil del público al que está dirigido el evento (familias, jóvenes, etc.).                    |
+| Estado              | CHAR (10)      | x(10)       | TAB1                | N/A        | N/A             | Estado actual del evento (planeado, en curso, finalizado, cancelado).                           |                                     |
+| PresupuestoEstimado | DECIMAL (10,2) | 9999999.99  | >0                  | Moneda     | N/A             | Costo estimado para la realización del evento.                                                  |
+
+### TAB1 - Estado del Evento
+
+| **CODIGO** | **DESCRIPCIÓN** |
+| ---------- | --------------- |
+| E1         | Planeado        |
+| E2         | En Curso        |
+| E3         | Finalizado      |
+| E4         | Cancelado       |
+
+### TAB2 - Público Objetivo
+
+| **CODIGO** | **DESCRIPCIÓN**  |
+| ---------- | ---------------- |
+| P1         | Familias         |
+| P2         | Adultos          |
+| P3         | Niños            |
+| P4         | Jóvenes          |
+| P5         | Personas Mayores |
